syntax = "proto3";

option go_package = "./;confproto";

package confproto;

service getInfo {
  rpc returnInfo (requestId) returns (replyInfo) {}
}

message requestId {
  string name = 1;
  string year = 2;
  string album = 3;
  string rank = 4;
}

message replyInfo {
  string info = 1;
}
// protoc --go_out=. --go-grpc_out=. servidor.proto